# strawberry-django-demo

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
demo/: asgi.py  schema.py  settings.py  urls.py  views.py  wsgi.py
demo/base/: dataloaders.py  types.py
demo/management/commands/: populate_products.py
demo/order/: admin.py  models.py  schema.py  types.py
demo/order/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_options_alter_order_cart_and_more.py
demo/product/: admin.py  apps.py  models.py  schema.py  types.py
demo/product/migrations/: 0001_initial.py  0002_alter_product_brand_alter_productimage_product.py  0003_alter_product_brand.py
demo/user/: admin.py  apps.py  models.py  schema.py  types.py
demo/user/migrations/: 0001_initial.py  0002_user_birth_date_email.py
