[tool.poetry]
name = "strawberry-django-demo"
version = "0.1.0"
description = ""
authors = ["Thiago Bellini Ribeiro <thiago@bellini.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "demo" }]

[tool.poetry.dependencies]
python = "^3.12"
daphne = "^4.0.0"
django = "^5.0.4"
django-choices-field = "^2.2.2"
django-debug-toolbar = "^4.1.0"
django-extensions = "^3.2.3"
pillow = "^10.0.1"
requests = "^2.31.0"
strawberry-graphql = "^0.224.1"
strawberry-graphql-django = "^0.37.1"
typing-extensions = "^4.7.1"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
django-types = "^0.19.1"
ruff = "^0.3.5"

[tool.ruff]
target-version = "py312"
preview = true

[tool.ruff.lint]
extend-select = [
  "A",
  "ASYNC100",
  "ASYNC101",
  "ASYNC102",
  "B",
  "BLE",
  "C4",
  "COM",
  "D",
  "D2",
  "D3",
  "D4",
  "DTZ",
  "E",
  "ERA",
  "EXE",
  "F",
  "FURB",
  "G",
  "I",
  "ICN001",
  "INP",
  "ISC",
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
extend-ignore = [
  "D1",
  "D203",
  "D213",
  "D401",
  "D417",
  "E203",
  "PGH003",
  "PLC0415",
  "PLR09",
  "PLR6301",
  "RUF012",
  "SLF001",
  "TRY003",
  # ruff formatter recommends to disable those
  "COM812",
  "COM819",
  "D206",
  "E111",
  "E114",
  "E117",
  "E501",
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]
exclude = [
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".tox",
  ".venv",
  "__pycached__",
  "_build",
  "buck-out",
  "build",
  "dist",
]

[tool.ruff.per-file-ignores]
"*/types.py" = ["TCH001", "TCH002"]
"*/schema.py" = ["TCH001", "TCH002"]

[tool.ruff.lint.isort]

[tool.ruff.format]

[tool.pyright]
pythonVersion = "3.12"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"
exclude = [".venv", "**/migrations", "dist", "docs"]
reportCallInDefaultInitializer = "warning"
reportMatchNotExhaustive = "warning"
reportMissingSuperCall = "warning"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "none"
reportUnnecessaryCast = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUntypedNamedTuple = "error"
reportUnusedExpression = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportIncompatibleVariableOverride = "none"
reportIncompatibleMethodOverride = "none"
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
